# SimpleHaskellStackVM

./: .gitattributes  DemoVirtualMachine.cabal  LICENSE  README.md  br.sh  run.sh  stack.yaml
app/: Main.hs
src/: Lib.hs  VirtualMachine.hs
test/: Spec.hs
