name:                DemoVirtualMachine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/DemoVirtualMachine#readme
license:             MIT
license-file:        LICENSE
author:              Andre Van Der Merwe 
maintainer:          dart@pobox.com
copyright:           2016 Andre Van Der Merwe
category:            Demo
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VirtualMachine
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , containers
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

executable DemoVirtualMachine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , DemoVirtualMachine
                     , protolude
                     , text
                     , containers
  default-language:    Haskell2010

test-suite DemoVirtualMachine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DemoVirtualMachine
                     , protolude
                     , hspec
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/DemoVirtualMachine
